<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.Drifty</groupId>
    <artifactId>Drifty</artifactId>
    <version>2.1.0</version>
    <name>Drifty</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.1</junit.version>
        <javafx.version>21.0.1</javafx.version>
        <gluonfx-maven-plugin.version>1.0.21</gluonfx-maven-plugin.version>
        <native-maven-plugin.version>0.9.28</native-maven-plugin.version>
        <guiMain>GUI.Forms.Main</guiMain>
        <cliMain>CLI.Main</cliMain>
        <package.type/>
        <mac.app.store/>
        <resource-config-file/>
        <system-native-image-arg/>
        <compatibility-arg/>
        <system-linker-arg/>
        <versions-maven-plugin>2.16.2</versions-maven-plugin>
        <maven-compiler-plugin>3.11.0</maven-compiler-plugin>
        <javafx-maven-plugin>0.0.8</javafx-maven-plugin>
    </properties>

    <!--
    To package:
    mvn clean -Pbuild-drifty-gui-for-macos-latest gluonfx:build gluonfx:package
    -->
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.2</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.15.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
        <dependency>
            <groupId>org.hildan.fxgson</groupId>
            <artifactId>fx-gson</artifactId>
            <version>5.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.11.0</version>
        </dependency>
        <dependency>
            <groupId>org.buildobjects</groupId>
            <artifactId>jproc</artifactId>
            <version>2.8.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--Maven Compiler Plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin}</version>
                <configuration>
                    <source>20</source>
                    <target>20</target>
                </configuration>
            </plugin>
            <!-- Formatter Maven Plugin-->
            <plugin>
                <groupId>org.openrewrite.maven</groupId>
                <artifactId>rewrite-maven-plugin</artifactId>
                <version>5.14.1</version>
                <configuration>
                    <activeRecipes>
                        <recipe>org.openrewrite.staticanalysis.CodeCleanup</recipe>
                        <recipe>org.openrewrite.staticanalysis.CommonStaticAnalysis</recipe>
                        <recipe>org.openrewrite.recommendations.CodeHealth</recipe>
                        <recipe>org.openrewrite.maven.BestPractices</recipe>
                        <recipe>org.openrewrite.java.format.AutoFormat</recipe>
                    </activeRecipes>
                    <checkstyleConfigFile>.github/linters/sun_checks.xml</checkstyleConfigFile>
                    <exclusions>
                        <exclusion>**/module-info.java</exclusion>
                    </exclusions>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-static-analysis</artifactId>
                        <version>1.1.1</version>
                    </dependency>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-recommendations</artifactId>
                        <version>1.0.6</version>
                    </dependency>
                </dependencies>
            </plugin>
            <!--Maven Versions Plugin-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-maven-plugin}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.2</version>
            </plugin>
            <!--JavaFX Maven Plugin-->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx-maven-plugin}</version>
                <configuration>
                    <mainClass>${guiMain}</mainClass>
                </configuration>
            </plugin>
            <!-- GUI native image builder plugin-->
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx-maven-plugin.version}</version>
                <configuration>
                    <enableSWRendering>true</enableSWRendering>
                    <mainClass>${guiMain}</mainClass>
                    <linkerArgs>
                        <arg>${system-linker-arg}</arg>
                    </linkerArgs>
                    <nativeImageArgs>
                        <arg>--enable-url-protocols=https</arg>
                        <arg>--enable-url-protocols=http</arg>
                        <arg>--no-fallback</arg>
                        <arg>--verbose</arg>
                        <arg>-H:ResourceConfigurationFiles=${pom.basedir}/config/${resource-config-file}</arg>
                        <arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</arg>
                        <!--                        <arg>-o Drifty GUI</arg>-->
                        <arg>${system-native-image-arg}</arg>
                        <arg>${compatibility-arg}</arg>
                    </nativeImageArgs>
                    <appIdentifier>${guiMain}</appIdentifier>
                    <releaseConfiguration>
                        <vendor>Drifty</vendor>
                        <description>Drifty is an open-source interactive file downloader system</description>
                        <packageType>${package.type}</packageType>
                        <bundleShortVersion>${project.version}</bundleShortVersion>
                        <bundleVersion>${project.version}</bundleVersion>
                        <!-- for macOS/iOS -->
                        <skipSigning>true</skipSigning>
                    </releaseConfiguration>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- [Windows] CLI native image builder profile -->
        <profile>
            <id>build-drifty-cli-for-windows-latest</id>
            <properties>
                <resource-config-file>resource-config-windows.json</resource-config-file>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <imageName>Drifty CLI</imageName>
                            <mainClass>${cliMain}</mainClass>
                            <outputDirectory>target/CLI/windows</outputDirectory>
                            <buildArgs>
                                <buildArg>--enable-url-protocols=https</buildArg>
                                <buildArg>--enable-url-protocols=http</buildArg>
                                <buildArg>-H:ResourceConfigurationFiles=${pom.basedir}/config/${resource-config-file}</buildArg>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                                <buildArg>--verbose</buildArg>
                            </buildArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <id>build</id>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <!-- [Linux] CLI native image builder profile -->
        <profile>
            <id>build-drifty-cli-for-ubuntu-latest</id>
            <properties>
                <resource-config-file>resource-config-linux.json</resource-config-file>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <imageName>Drifty CLI</imageName>
                            <mainClass>${cliMain}</mainClass>
                            <outputDirectory>target/CLI/linux</outputDirectory>
                            <buildArgs>
                                <buildArg>--enable-url-protocols=https</buildArg>
                                <buildArg>--enable-url-protocols=http</buildArg>
                                <buildArg>-H:ResourceConfigurationFiles=${pom.basedir}/config/${resource-config-file}</buildArg>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>-march=compatibility</buildArg>
                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                                <buildArg>--verbose</buildArg>
                            </buildArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <id>build</id>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <!-- [macOS] CLI native image builder profile -->
        <profile>
            <id>build-drifty-cli-for-macos-latest</id>
            <properties>
                <resource-config-file>resource-config-mac.json</resource-config-file>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <imageName>Drifty CLI</imageName>
                            <mainClass>${cliMain}</mainClass>
                            <outputDirectory>target/CLI/macos</outputDirectory>
                            <buildArgs>
                                <buildArg>--enable-url-protocols=https</buildArg>
                                <buildArg>--enable-url-protocols=http</buildArg>
                                <buildArg>-H:ResourceConfigurationFiles=${pom.basedir}/config/${resource-config-file}</buildArg>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>-march=compatibility</buildArg>
                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                                <buildArg>--verbose</buildArg>
                            </buildArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <id>build</id>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <!-- [macOS] GUI native image builder profile -->
        <profile>
            <id>build-drifty-gui-for-macos-latest</id>
            <properties>
                <package.type>pkg</package.type>
                <system-native-image-arg>-Dsvm.platform=org.graalvm.nativeimage.Platform$MACOS_AMD64</system-native-image-arg>
                <system-linker-arg>${pom.basedir}/config/missing_symbols-macos-latest.o</system-linker-arg>
                <resource-config-file>resource-config-mac.json</resource-config-file>
                <mac.app.store>true</mac.app.store>
            </properties>
        </profile>
        <!-- [Linux] GUI native image builder profile -->
        <profile>
            <id>build-drifty-gui-for-ubuntu-latest</id>
            <properties>
                <system-linker-arg>${pom.basedir}/config/missing_symbols-ubuntu-latest.o</system-linker-arg>
                <resource-config-file>resource-config-linux.json</resource-config-file>
                <compatibility-arg>-march=compatibility</compatibility-arg>
            </properties>
        </profile>
        <!-- [Windows] GUI native image builder profile -->
        <profile>
            <id>build-drifty-gui-for-windows-latest</id>
            <properties>
                <package.type>msi</package.type>
                <system-linker-arg>${pom.basedir}/config/missing_symbols-windows-latest.o</system-linker-arg>
                <resource-config-file>resource-config-windows.json</resource-config-file>
            </properties>
        </profile>
    </profiles>
</project>
